# AkarScript

./: .gitignore  CMakeLists.txt  LICENSE  out.ako
docs/: README.md  api.md  building.md  examples.md  language.md  object-file.md  operators.md  profiling.md  reactive.md  stdlib.md  vm.md
examples/: 01_basics.ak  02_control_flow.ak  03_functions.ak  04_arrays_maps.ak  05_classes.ak  06_include.ak  07_advanced.ak  08_upvalues.ak  09_signals_effects.ak  10_enums.ak  11_profiling.ak  bench_jit.ak  bench_wide.ak  benchmark.ak  demo.ak  embed_demo.cpp  gc_objects.ak  gc_stress.ak  math_utils.ak  sum_primes.ak  test_export.ak  test_prime.ak
include/akar/api/: akar.h
include/akar/common/: chunk.h  opcodes.h  smallvec.h  token.h  value.h
include/akar/compiler/: ast.h  codegen.h  lexer.h  parser.h
include/akar/native/: http.h  ssl.h
include/akar/util/: repl.h
include/akar/vm/: jit.h  native.h  object_file.h  profiler.h  system.h  trace.h  vm.h
lib/: http.ak
src/: compiler_main.cpp  disasm_main.cpp  vm_main.cpp
src/api/: akar_api.cpp
src/common/: chunk.cpp  value.cpp
src/compiler/: ast.cpp  codegen.cpp  lexer.cpp  parser.cpp
src/native/: http.cpp  ssl.cpp
src/util/: repl.cpp
src/vm/: gc.cpp  jit.cpp  jit_arm64.cpp  native.cpp  object_file.cpp  profiler.cpp  system.cpp  trace.cpp  vm.cpp
tests/: test_export.cpp  test_fibers_comprehensive.ak  test_gc.cpp  test_lexer.cpp  test_main.cpp  test_native.cpp  test_nested_fibers.ak  test_parser.cpp  test_ssl_http.cpp  test_system.cpp  test_vm.cpp  test_wide_big.ak  test_wide_registers.ak
